objects/ASI_MFM_Exchange_Rate__c.object
<CustomObject>
    <fields>
        <fullName>ASI_MFM_Application__c</fullName>
        <label>Application</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>CRM</fullName>
                </value>
                <value>
                    <fullName>MFM</fullName>
                </value>
                <value>
                    <fullName>T&amp;E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Base_Currency__c</fullName>
        <label>Base Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>7AU</fullName>
                </value>
                <value>
                    <fullName>7EU</fullName>
                </value>
                <value>
                    <fullName>7GB</fullName>
                </value>
                <value>
                    <fullName>7US</fullName>
                </value>
                <value>
                    <fullName>8AU</fullName>
                </value>
                <value>
                    <fullName>8EU</fullName>
                </value>
                <value>
                    <fullName>8GB</fullName>
                </value>
                <value>
                    <fullName>8US</fullName>
                </value>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>HKD</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>SGD</fullName>
                </value>
                <value>
                    <fullName>TWD</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>CNY</fullName>
                </value>
                <value>
                    <fullName>PHP</fullName>
                </value>
                <value>
                    <fullName>IDR</fullName>
                </value>
                <value>
                    <fullName>BHT</fullName>
                </value>
                <value>
                    <fullName>THB</fullName>
                </value>
                <value>
                    <fullName>KRW</fullName>
                </value>
                <value>
                    <fullName>NZD</fullName>
                </value>
                <value>
                    <fullName>MOP</fullName>
                </value>
                <value>
                    <fullName>VND</fullName>
                </value>
                <value>
                    <fullName>SEK</fullName>
                </value>
                <value>
                    <fullName>AED</fullName>
                </value>
                <value>
                    <fullName>RUB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Counter_Currency__c</fullName>
        <label>Counter_Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>7AU</fullName>
                </value>
                <value>
                    <fullName>7EU</fullName>
                </value>
                <value>
                    <fullName>7GB</fullName>
                </value>
                <value>
                    <fullName>7US</fullName>
                </value>
                <value>
                    <fullName>8AU</fullName>
                </value>
                <value>
                    <fullName>8EU</fullName>
                </value>
                <value>
                    <fullName>8GB</fullName>
                </value>
                <value>
                    <fullName>8US</fullName>
                </value>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>HKD</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>SGD</fullName>
                </value>
                <value>
                    <fullName>TWD</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>CNY</fullName>
                </value>
                <value>
                    <fullName>BHT</fullName>
                </value>
                <value>
                    <fullName>THB</fullName>
                </value>
                <value>
                    <fullName>SEK</fullName>
                </value>
                <value>
                    <fullName>MYR</fullName>
                </value>
                <value>
                    <fullName>KRW</fullName>
                </value>
                <value>
                    <fullName>PHP</fullName>
                </value>
                <value>
                    <fullName>NZD</fullName>
                </value>
                <value>
                    <fullName>MOP</fullName>
                </value>
                <value>
                    <fullName>VND</fullName>
                </value>
                <value>
                    <fullName>RMB</fullName>
                </value>
                <value>
                    <fullName>AED</fullName>
                </value>
                <value>
                    <fullName>RUB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TW</fullName>
                </value>
                <value>
                    <fullName>HK</fullName>
                </value>
                <value>
                    <fullName>JP</fullName>
                </value>
                <value>
                    <fullName>RM</fullName>
                </value>
                <value>
                    <fullName>GF</fullName>
                </value>
                <value>
                    <fullName>MY</fullName>
                </value>
                <value>
                    <fullName>CN</fullName>
                </value>
                <value>
                    <fullName>TR</fullName>
                </value>
                <value>
                    <fullName>SG</fullName>
                </value>
                <value>
                    <fullName>PH</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>TH</fullName>
                </value>
                <value>
                    <fullName>KR</fullName>
                </value>
                <value>
                    <fullName>VN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Effective_Date__c</fullName>
        <label>Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Exchange_Rate_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Exchange Rate External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_MFM_Exchange_Rate__c</fullName>
        <label>Exchange Rate</label>
        <precision>18</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY1314</fullName>
                </value>
                <value>
                    <fullName>FY1415</fullName>
                </value>
                <value>
                    <fullName>FY1516</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Exchange Rate</label>
    <listViews>
        <fullName>ASI_JP_TnE_Exchange_Rate</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Country__c</columns>
        <columns>ASI_MFM_Base_Currency__c</columns>
        <columns>ASI_MFM_Counter_Currency__c</columns>
        <columns>ASI_MFM_Effective_Date__c</columns>
        <columns>ASI_MFM_Exchange_Rate__c</columns>
        <columns>ASI_MFM_Application__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_MFM_Country__c</field>
            <operation>equals</operation>
            <value>JP</value>
        </filters>
        <label>TnE JP Exchange Rate</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ASI_MY_Exchange_Rate</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Application__c</columns>
        <columns>ASI_MFM_Base_Currency__c</columns>
        <columns>ASI_MFM_Counter_Currency__c</columns>
        <columns>ASI_MFM_Country__c</columns>
        <columns>ASI_MFM_Exchange_Rate__c</columns>
        <columns>ASI_MFM_Effective_Date__c</columns>
        <columns>ASI_MFM_Exchange_Rate_External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_MFM_Country__c</field>
            <operation>equals</operation>
            <value>MY</value>
        </filters>
        <filters>
            <field>ASI_MFM_Application__c</field>
            <operation>equals</operation>
            <value>MFM</value>
        </filters>
        <label>MY MFM Exchange Rate</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ASI_TnE_SG_Exchange_Rate</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Application__c</columns>
        <columns>ASI_MFM_Base_Currency__c</columns>
        <columns>ASI_MFM_Counter_Currency__c</columns>
        <columns>ASI_MFM_Country__c</columns>
        <columns>ASI_MFM_Exchange_Rate__c</columns>
        <columns>ASI_MFM_Effective_Date__c</columns>
        <columns>ASI_MFM_Exchange_Rate_External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_MFM_Country__c</field>
            <operation>equals</operation>
            <value>SG</value>
        </filters>
        <filters>
            <field>ASI_MFM_Application__c</field>
            <operation>equals</operation>
            <value>MFM</value>
        </filters>
        <label>SG MFM Exchange Rate</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Country__c</columns>
        <columns>ASI_MFM_Base_Currency__c</columns>
        <columns>ASI_MFM_Counter_Currency__c</columns>
        <columns>ASI_MFM_Effective_Date__c</columns>
        <columns>ASI_MFM_Exchange_Rate__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CN_Exchange_Rate</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Base_Currency__c</columns>
        <columns>ASI_MFM_Counter_Currency__c</columns>
        <columns>ASI_MFM_Country__c</columns>
        <columns>ASI_MFM_Exchange_Rate__c</columns>
        <columns>ASI_MFM_Effective_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_MFM_Country__c</field>
            <operation>equals</operation>
            <value>CN</value>
        </filters>
        <label>CN Exchange Rate</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>GF_Exchange_Rate_AED</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Application__c</columns>
        <columns>ASI_MFM_Base_Currency__c</columns>
        <columns>ASI_MFM_Counter_Currency__c</columns>
        <columns>ASI_MFM_Country__c</columns>
        <columns>ASI_MFM_Exchange_Rate__c</columns>
        <columns>ASI_MFM_Effective_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_MFM_Country__c</field>
            <operation>equals</operation>
            <value>GF</value>
        </filters>
        <filters>
            <field>ASI_MFM_Base_Currency__c</field>
            <operation>equals</operation>
            <value>AED</value>
        </filters>
        <label>GF Exchange Rate - AED</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_GF</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GF_Exchange_Rate_EUR</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Application__c</columns>
        <columns>ASI_MFM_Base_Currency__c</columns>
        <columns>ASI_MFM_Counter_Currency__c</columns>
        <columns>ASI_MFM_Country__c</columns>
        <columns>ASI_MFM_Exchange_Rate__c</columns>
        <columns>ASI_MFM_Effective_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_MFM_Country__c</field>
            <operation>equals</operation>
            <value>GF</value>
        </filters>
        <filters>
            <field>ASI_MFM_Base_Currency__c</field>
            <operation>equals</operation>
            <value>EUR</value>
        </filters>
        <label>GF Exchange Rate - EUR</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_GF</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>HK_Exchange_Rate2</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Base_Currency__c</columns>
        <columns>ASI_MFM_Counter_Currency__c</columns>
        <columns>ASI_MFM_Country__c</columns>
        <columns>ASI_MFM_Exchange_Rate__c</columns>
        <columns>ASI_MFM_Effective_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_MFM_Country__c</field>
            <operation>equals</operation>
            <value>HK</value>
        </filters>
        <label>HK Exchange Rate</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>JP_Exchange_Rate</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Base_Currency__c</columns>
        <columns>ASI_MFM_Counter_Currency__c</columns>
        <columns>ASI_MFM_Country__c</columns>
        <columns>ASI_MFM_Exchange_Rate__c</columns>
        <columns>ASI_MFM_Effective_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_MFM_Country__c</field>
            <operation>equals</operation>
            <value>JP</value>
        </filters>
        <filters>
            <field>ASI_MFM_Base_Currency__c</field>
            <operation>equals</operation>
            <value>JPY</value>
        </filters>
        <label>JP Exchange Rate</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>RM_Exchange_Rate</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Base_Currency__c</columns>
        <columns>ASI_MFM_Counter_Currency__c</columns>
        <columns>ASI_MFM_Country__c</columns>
        <columns>ASI_MFM_Exchange_Rate__c</columns>
        <columns>ASI_MFM_Effective_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_MFM_Country__c</field>
            <operation>equals</operation>
            <value>RM</value>
        </filters>
        <filters>
            <field>ASI_MFM_Base_Currency__c</field>
            <operation>equals</operation>
            <value>HKD</value>
        </filters>
        <label>RM Exchange Rate</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SG_Exchange_Rate_NPP</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Base_Currency__c</columns>
        <columns>ASI_MFM_Counter_Currency__c</columns>
        <columns>ASI_MFM_Country__c</columns>
        <columns>ASI_MFM_Exchange_Rate__c</columns>
        <columns>ASI_MFM_Application__c</columns>
        <columns>ASI_NPP_Fiscal_Year__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_MFM_Effective_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_MFM_Country__c</field>
            <operation>equals</operation>
            <value>SG</value>
        </filters>
        <filters>
            <field>ASI_MFM_Application__c</field>
            <operation>equals</operation>
            <value>NPP</value>
        </filters>
        <label>SG Exchange Rate - NPP</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_SG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TH_Exchange_Rate</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Base_Currency__c</columns>
        <columns>ASI_MFM_Counter_Currency__c</columns>
        <columns>ASI_MFM_Country__c</columns>
        <columns>ASI_MFM_Exchange_Rate__c</columns>
        <columns>ASI_MFM_Effective_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_MFM_Country__c</field>
            <operation>equals</operation>
            <value>TH</value>
        </filters>
        <label>TH Exchange Rate</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>TR_Exchange_Rate</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Base_Currency__c</columns>
        <columns>ASI_MFM_Counter_Currency__c</columns>
        <columns>ASI_MFM_Country__c</columns>
        <columns>ASI_MFM_Exchange_Rate__c</columns>
        <columns>ASI_MFM_Effective_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_MFM_Country__c</field>
            <operation>equals</operation>
            <value>TR</value>
        </filters>
        <filters>
            <field>ASI_MFM_Base_Currency__c</field>
            <operation>equals</operation>
            <value>HKD</value>
        </filters>
        <label>TR Exchange Rate</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>TR_Exchange_Rate1</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Base_Currency__c</columns>
        <columns>ASI_MFM_Counter_Currency__c</columns>
        <columns>ASI_MFM_Country__c</columns>
        <columns>ASI_MFM_Exchange_Rate__c</columns>
        <columns>ASI_MFM_Effective_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_MFM_Country__c</field>
            <operation>equals</operation>
            <value>TR</value>
        </filters>
        <label>TR Exchange Rate</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>TW_Exchange_Rate</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Base_Currency__c</columns>
        <columns>ASI_MFM_Counter_Currency__c</columns>
        <columns>ASI_MFM_Country__c</columns>
        <columns>ASI_MFM_Exchange_Rate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_MFM_Country__c</field>
            <operation>equals</operation>
            <value>TW</value>
        </filters>
        <label>TW Exchange Rate</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>EXR{000000}</displayFormat>
        <label>Exchange Rate ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exchange Rates</pluralLabel>
    <recordTypes>
        <fullName>ASI_NPP_SG_Exchange_Rate</fullName>
        <active>true</active>
        <label>NPP SG Exchange Rate</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_KR_Exchange_Rate</fullName>
        <active>true</active>
        <label>TnE KR Exchange Rate</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>